--- a/memoria/Lectura de llaves RFID-RC522.tex
+++ b/memoria/Lectura de llaves RFID-RC522.tex
@@ -84,19 +84,12 @@ Para la realización del proyecto se deben seguir los siguientes pasos.
     \item Instalar \href{https://kinsta.com/es/base-de-conocimiento/instalar-python/}{intérprete de Python}.
 \end{enumerate}
 
-\textbf{Instalación de librerías en el servidor:}
-\begin{enumerate}
-    \item Introducir el siguiente comando desde el terminal del servidor para instalar Flask:
-    \begin{verbatim}
-    pip install Flask
-    \end{verbatim}
-\end{enumerate}
 
 \textbf{Instalación de archivos en la Raspberry Pi Pico WH:}
 \begin{enumerate}
 	\item Instalar firmware de MicroPython:
 		\begin{enumerate}
-			\item Introducir el USB en el ordenador mientras se apreta el boton BOOTSEL.
+			\item Introducir el USB en el ordenador mientras se aprieta el botón BOOTSEL.
 			\item Abrir Thonny y realizar los siguientes pasos:
 			\begin{figure}[h]
 			\centering
